[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/firefly_hive.png" type="Texture" id=1]
[ext_resource path="res://Enemy/FireFlyHive.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.9699, 13.1033 )

[node name="FireFlyHive" type="StaticBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.67874 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.19209e-06, 8 )
scale = Vector2( 3.2, 3.2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 16 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.8
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
